--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-certifi==2022.12.7
-charset-normalizer==3.0.1
-idna==3.4
-numpy==1.24.2
-pandas==1.5.3
-python-dateutil==2.8.2
-pytz==2022.7.1
-requests==2.28.2
-six==1.16.0
-tqdm==4.64.1
-urllib3==1.26.14
+numpy==2.3.4
+pandas==2.3.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
+tzdata==2025.2
